--- a/auth/login.css
+++ b/auth/login.css
@@ -21,12 +21,12 @@ header {
 
 header > img {
     color: white;
-    height: 50px;
+    height: 10pv;
     width: 100px;
 }
 
 main {
-    height: 100vh;
+    height: 90vh;
     width: 100vw;
     display: flex;
     flex-flow: row nowrap;
