--- a/auth/login.css
+++ b/auth/login.css
@@ -43,7 +43,7 @@ section{
     backdrop-filter: blur(12px);
     -webkit-backdrop-filter: blur(12px);
 
-    height: 400px;
+    min-height: 420px;
     width: 300px;
     padding: 15px;
     border-radius: 16px;
@@ -61,9 +61,9 @@ section{
 
 div.formulario{
 
-    height: 340px;
+    width: 100%;
     display: flex;
-    flex-flow: column nowrap;
+    flex-flow: column wrap;
     justify-content: space-evenly;
     align-items: center;
 }
@@ -72,7 +72,7 @@ h1, p {
     color: white;
     font-family: var(--fonte-normal);
     text-align: center;
-    height: 50px;
+    height: 40px;
     margin-bottom: 5px;
 }
 
@@ -122,10 +122,36 @@ input::placeholder{
     color: rgba(190, 190, 190, 0.966);
 }
 
-#btnSubmitLogin {
+.grupo-senha {
     width: 100%;
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+}
+
+/* Ajusta cada campo dentro do grupo */
+.grupo-senha .campo {
+    flex: 1;
+    margin: 0;
+}
+
+/* Ajusta largura do input */
+.grupo-senha .campo > input {
+    width: 100%;
+}
+
+div.confirmar {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+}
+
+#btnSubmitLogin {
+
+    width: 80%;
     height: 40px;
-    margin-top: 15px;
+    margin-top: 25px;
 
     background: linear-gradient(120deg, var(--cor00) , var(--cor02));
     color: white;
@@ -144,14 +170,20 @@ input::placeholder{
     box-shadow: 0 6px 15px rgba(0,0,0,0.4);
 }
 
-form > a {
-    margin-top: 10px;
+
+.link-cadastro {
+    margin-top: 15px;
+    text-align: center;
+}
+
+.link-cadastro a {
     color: #838da1;
     text-decoration: none;
     font-size: 14px;
+    display: inline-block;
 }
 
-form > a:hover {
+.link-cadastro a:hover {
     text-decoration: underline;
 }
 
